force-app/main/default/objects/ProductPrice__c/ProductPrice__c.object-meta.xml
<CustomObject>
    <label>품목별 약정가</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>