force-app/main/default/objects/ProductPrice__c/fields/OrderEndDate__c.field-meta.xml
<CustomField>
    <fullName>OrderEndDate__c</fullName>
    <description>발주 종료일자</description>
    <label>Order End Date</label>
    <type>Date</type>
</CustomField>