force-app/main/default/objects/ProductPrice__c/fields/OrderLimit__c.field-meta.xml
<CustomField>
    <fullName>OrderLimit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>본사 발주 제한</description>
    <label>Order Limit</label>
    <type>Checkbox</type>
</CustomField>