force-app/main/default/objects/ProductPrice__c/fields/OrderLower__c.field-meta.xml
<CustomField>
    <fullName>OrderLower__c</fullName>
    <description>발주 하한수량</description>
    <label>Order Lower</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>