force-app/main/default/objects/ProductPrice__c/fields/OrderStartDate__c.field-meta.xml
<CustomField>
    <fullName>OrderStartDate__c</fullName>
    <description>발주 시작일자</description>
    <label>Order Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>