force-app/main/default/objects/ProductPrice__c/fields/OrderUpper__c.field-meta.xml
<CustomField>
    <fullName>OrderUpper__c</fullName>
    <label>Order Upper</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>